# qe_density

./: .gitignore  get_rx.py  hdf5read.ipynb  new.py  new_sh.ipynb  original_sh.ipynb  psi.1924923.clean  psi4_funcs.py  pyproject.toml  quadratures.py  sh_decomp.py  sh_with_becke.py  soap_expansion.py  test.ipynb  test_2.ipynb  test_quadratures.py  test_sh_integral.py  testing_sh.py  tim.py  tools.py  tools_old.py  updated_sh.ipynb
src/qe_density_reader/: reader.py  tmp.py  tools_old.py
